# aegis-tools-system

./: .gitignore  MIGRATION.md  README.md  flake.nix  pyproject.toml
aegis/: cli.py  config.py  crypto.py  dnssec.py  entities.py  host_secrets.py  kerberos.py  manifest.py  nexus.py  ssh.py  ssh_utils.py
nix/: aegis-secrets-module.nix
scripts/: initialize-kerberos-realm.rb
tests/: __init__.py  test_cli.py  test_config.py  test_crypto.py  test_dnssec.py  test_host_secrets.py  test_ssh.py
